# mkdocs-sqlite-console

./: .gitignore  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: publish.yml
bases/: test.db
css/: sqlite_ide.css
docs/: index.md  licence.md  notes-de-version.md  usage.md
docs/bases/: test.db
docs/sql/: code.sql  code1.sql
js/: sqlite_ide.js
licence/: index.html
mkdocs_sqlite_console/: __init__.py  plugin.py
mkdocs_sqlite_console/js/: sqlite_ide.js
notes-de-version/: index.html
search/: search_index.json
sql/: init1.sql
usage/: index.html
